--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,6 +6,8 @@ html
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
     = csrf_meta_tags
-  body
-
+  body class=[@current_page.page_uid]
+    
+    = render 'shared/nav'
     = yield
+    = render 'shared/footer'
