Mobile Menu & Sticky Footer

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -17,6 +17,7 @@
 //= require inplace_editing
 //= require utils
 //= require cloning
+//= require global
 
 <% environment.context_class.instance_eval { include Rails.application.routes.url_helpers } %>
 $(document).ready(function() {
