--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 @import "bootstrap/reboot";
 @import "bootstrap/normalize";
 @import "bootstrap/navbar";
+@import "bootstrap/transitions";
 @import "bootstrap/utilities/position";
 @import "font-awesome";
 @import "inplace_editing";
