--- a/app/views/shared/_nav.slim
+++ b/app/views/shared/_nav.slim
@@ -1,4 +1,4 @@
-nav class="navbar fixed-top navbar-toggleable-md"
+nav class="navbar navbar-toggleable-md"
   button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarCollapse" onclick="openMenu()" = svg 'menu' 
   a href="." = svg 'logo' 
   #navbarCollapse class="collapse navbar-collapse"
