--- a/app/views/shared/_footer.slim
+++ b/app/views/shared/_footer.slim
@@ -3,8 +3,8 @@ section#links
     a.projetos href="/pepsi"
       h1 Projetos
       span Veja o que já fizemos
-  - if @current_page.page_uid != 'quemsomos#index'
-    a.quemsomos href="/quemsomos"
+  - if @current_page.page_uid != 'quem_somos#index'
+    a.quemsomos href="/quem_somos"
       h1 Quem Somos
       span Saiba mais sobre a eeze
 footer
