--- a/app/views/shared/_nav.slim
+++ b/app/views/shared/_nav.slim
@@ -10,4 +10,4 @@ nav class="navbar navbar-toggleable-md"
         a.nav-link href="/pepsi" Projetos
         .divider = svg 'divider'
       li.nav-item
-        a.nav-link href="/quemsomos" Quem Somos
+        a.nav-link href="/quem_somos" Quem Somos
