--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -7,11 +7,16 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0.15em;
   text-transform: uppercase;
   text-rendering: geometricPrecision;
+  line-height: 1em;
 }
 
 h1 { font-size: 3em; }
+h2 { font-size: 2.5em; }
 
 p, span {
   font-family: $font__text;
   letter-spacing: .05em;
 }
+
+p { text-align: justify; }
+span { color: $color__sec; }
