--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -88,9 +88,8 @@ footer {
       align-items: center;
       flex-flow: column wrap;
       background-size: cover;
-      h1 { margin: 0; line-height: 1em; }
+      h1 { margin: 0; }
       span {
-          color: $color__sec;
           display: flex;
           align-items: center;
           &:before, &:after {
@@ -129,4 +128,52 @@ body[class="pepsi#index"] {
       margin-left: -16px;
       margin-bottom: -5px;
     }
+}
+
+
+//Quem Somos
+body[class="quem_somos#index"] {
+  background-image: $bg__gradient_full;
+}
+
+#quem-somos {
+    padding: 12px;
+    color: #fff;
+    > h1 {
+       padding: 0 12px;
+       margin: -24px 0 0 0;
+    }
+    p { padding: 16px 16px 0 40px; }
+
+    .team {
+      display: flex;
+      flex-flow: row nowrap;
+      margin-bottom: 16px;
+      img { width: 48vw; height: 38vw; }
+      .role {
+          padding: 12px;
+          h2 { margin-left: -24px; }
+      }
+    }
+
+    #contact-form {
+      margin: 40px 0;
+
+      form { padding: 16px 32px 0 40px; }
+      .form-group { margin-bottom: .5rem; }
+      label, .help-block{ display: none; }
+      ::-webkit-input-placeholder  { color:rgba(255, 255, 255, 0.5); }
+      input, textarea {
+          background-color: rgba(255, 106, 236, 0.85);
+          color: #fff;
+          border-radius: 0;
+          border-color: rgba(255, 255, 255, 0.5);
+      }
+      input.btn{
+          width: 100%;
+          background-color: #fff;
+          color: #a93569;
+      }
+    }
+
 }
