--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,8 @@
 @import "bootstrap/transitions";
 @import "bootstrap/navbar";
 @import "bootstrap/carousel";
+@import "bootstrap/forms";
+@import "bootstrap/buttons";
 @import "font-awesome";
 @import "inplace_editing";
 
