//WIP Home Desktop
- fadein text
- carousel
-  tab

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -17,6 +17,8 @@
 //= require inplace_editing
 //= require utils
 //= require cloning
+//= require jquery.lettering.min
+//= require jquery.textillate
 //= require global
 
 <% environment.context_class.instance_eval { include Rails.application.routes.url_helpers } %>
