--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -1,6 +1,6 @@
 body { font-size: 14px; }
 
-h1, h2, h3, h4, h5, h6 {
+@mixin titles {
   font-family: $font__main;
   color: #fff;
   font-weight: 300;
@@ -8,6 +8,10 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   text-rendering: geometricPrecision;
   line-height: 1em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+   @include titles;
 }
 
 h1 { font-size: 3em; }
