--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -66,18 +66,43 @@ footer {
 }
 
 
-//HOME
 #brand {
-    height: calc(100vh - 60px);
+    min-height: calc(100vh - 60px);
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     background-image: $bg__gradient;
+    .carousel-item {
+        width: 90vw;
+        max-width: 768px;
+        min-height: 400px;
+        justify-content: center;
+        align-items: center;
+        h1 > span {
+            display: flex;
+            justify-content: center;
+            flex-flow: row wrap;
+            align-items: center;
+            > span {
+               margin: 0 8px;
+               > span {
+                  @include titles;
+               }
+            }
+        }
+        .active {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    }
     .scroll {
         position: absolute;
         bottom: 10px;
     }
+
+
 }
 
 #links {
@@ -106,74 +131,34 @@ footer {
 }
 
 
-
-// PEPSI
-body[class="pepsi#index"] {
-  background-image:  url(image_path('pattern-pepsi.png')), $bg__gradient_full;
-}
-
-#project {
-    padding: 40px 16px 0 16px;
-    > img {
-        width: 100%;
-        height: 240px;
-        object-fit: contain;
+@include media-breakpoint-up(lg) {
+    #brand {
+      align-items: baseline;
+      background-image: none;
+      min-height: auto;
+      #svg-brand { zoom: 1.25; }
+      .carousel-item { min-height: 450px; }
     }
-    h1 { margin: 0.67em 0 0 0; }
-    p { color: #fff; margin-left: 24px; }
-    .carousel img { max-height: 300px; }
-    iframe {
-      width: calc(100% + 32px);
-      min-height: 100%;
-      margin-left: -16px;
-      margin-bottom: -5px;
-    }
-}
-
-
-//Quem Somos
-body[class="quem_somos#index"] {
-  background-image: $bg__gradient_full;
-}
-
-#quem-somos {
-    padding: 12px;
-    color: #fff;
-    > h1 {
-       padding: 0 12px;
-       margin: -24px 0 0 0;
-    }
-    p { padding: 16px 16px 0 40px; }
-
-    .team {
-      display: flex;
-      flex-flow: row nowrap;
-      margin-bottom: 16px;
-      img { width: 48vw; height: 38vw; }
-      .role {
-          padding: 12px;
-          h2 { margin-left: -24px; }
-      }
+    .navbar {
+      flex-flow: row wrap;
+      justify-content: space-between;
     }
 
-    #contact-form {
-      margin: 40px 0;
-
-      form { padding: 16px 32px 0 40px; }
-      .form-group { margin-bottom: .5rem; }
-      label, .help-block{ display: none; }
-      ::-webkit-input-placeholder  { color:rgba(255, 255, 255, 0.5); }
-      input, textarea {
-          background-color: rgba(255, 106, 236, 0.85);
-          color: #fff;
-          border-radius: 0;
-          border-color: rgba(255, 255, 255, 0.5);
-      }
-      input.btn{
-          width: 100%;
-          background-color: #fff;
-          color: #a93569;
-      }
+    #navbarCollapse{
+        width: auto;
+        ul {
+          height: auto;
+          li a {
+            padding: 8px 16px;
+            @include titles;
+          }
+          .divider { display: none; }
+        }
     }
 
+    body[class="pages#home"] {
+        #project {
+          background-image: $bg__gradient_full2;
+        }
+    }
 }
