--- a/app/views/shared/_footer.slim
+++ b/app/views/shared/_footer.slim
@@ -1,4 +1,4 @@
-section#links
+section#links class="hidden-lg-up"
   - if @current_page.page_uid != 'pepsi#index'
     a.projetos href="/pepsi"
       h1 Projetos
