Mansory Grid & Gameplay

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -15,10 +15,13 @@
 //= require bootstrap-sprockets
 //= require best_in_place
 //= require inplace_editing
+//= require isotope
 //= require utils
 //= require cloning
 //= require jquery.lettering.min
 //= require jquery.textillate
+//= require get-size
+//= require masonry-horizontal
 //= require global
 
 <% environment.context_class.instance_eval { include Rails.application.routes.url_helpers } %>
