--- a/app/views/pepsi/_pepsi.slim
+++ b/app/views/pepsi/_pepsi.slim
@@ -7,7 +7,7 @@ ul#project-tabs class="nav nav-tabs hidden-lg-down" role="tablist"
   li class="nav-item"
     a class="nav-link" data-toggle="tab" href="#processo" role="tab" Processo
   li class="nav-item"
-    a class="nav-link" data-toggle="tab" href="#messages" role="tab" Gameplay
+    a class="nav-link" data-toggle="tab" href="#gameplay" role="tab" Gameplay
 
 #project-content.tab-content
   #sinopse class="tab-pane fade show active" role="tabpanel"
@@ -35,11 +35,38 @@ ul#project-tabs class="nav nav-tabs hidden-lg-down" role="tablist"
             .carousel-item 
               img class="d-block img-fluid" src="#{image_path(i)}" alt="slide#{i}"
               
-    / #masonry-container.clearfix 
-    /   - for i in (1..3)
-    /     img class="box" src="#{image_path(i)}" alt="slide#{i}"
+  	#mansory
 
               
-  #messages class="tab-pane fade" role="tabpanel"
+  #gameplay class="tab-pane fade" role="tabpanel"
     h1 Gameplay
-    iframe src="http://player.vimeo.com/video/153875405" width="640" height="360" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""
+  	img.hidden-lg-down src="#{image_path('gameplay.png')}" alt="Gameplay"
+    iframe src="http://player.vimeo.com/video/143253867?title=0&byline=0&portrait=0" width="284" height="505" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""
+		
+.grid.hidden-lg-down
+	.box
+		img src="#{image_path(1)}"
+	.box
+		img src="#{image_path(2)}"
+	.box.box-b
+		img src="#{image_path(2)}"
+	.box
+		img src="#{image_path(2)}"
+	.box
+		img src="#{image_path(1)}"
+	.box.box-h
+		img src="#{image_path(3)}"
+	.box.box-w
+		img src="#{image_path(1)}"
+	.box.box-w
+		img src="#{image_path(3)}"
+	.box
+		img src="#{image_path(2)}"
+	.box
+		img src="#{image_path(2)}"
+	.box.box-w
+		img src="#{image_path(1)}"
+	.box
+		img src="#{image_path(2)}"
+	.box
+		img src="#{image_path(2)}"
