--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -5,9 +5,10 @@ $color__sec: #70ffcb;
 $color__pink: #e62967;
 $color__red: #e73345;
 $color__purple: #63358b;
+$color__darken: #551237;
 
 $font__main: 'Teko', sans-serif;
-$font__text: 'EB Garamond', serif;
+$font__text: 'Cormorant Garamond', serif;
 
 //BACKGROUNDS
 $bg__boxes: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h20L0 20z' fill='%231f3360' fill-opacity='1' fill-rule='evenodd'/%3E%3C/svg%3E");
