--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,7 +31,7 @@
 @import "inplace_editing";
 @import "animate";
 
-@import url('https://fonts.googleapis.com/css?family=EB+Garamond|Teko:300,400');
+@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond:500,700|Teko:300,400');
 @import "variables";
 @import "fonts";
 @import "global";
