--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -14,4 +14,6 @@ section#brand
     
   .scroll.hidden-lg-up = svg 'scroll'
 
-section#project class="hidden-md-down" = render 'pepsi/pepsi'
+#content class="hidden-md-down"
+  section#project = render 'pepsi/pepsi'
+  section#quem-somos = render 'quem_somos/quemsomos'
