--- a/app/views/pepsi/_pepsi.slim
+++ b/app/views/pepsi/_pepsi.slim
@@ -1,7 +1,7 @@
 img src="#{image_path('logo-pepsi@big.png')}"
 #scroll-project.hidden-lg-down = svg 'scroll-project'
 
-ul#project-tabs class="nav nav-tabs hidden-lg-down" role="tablist"
+ul#tabs class="nav nav-tabs hidden-lg-down" role="tablist"
   li class="nav-item"
     a class="nav-link active" data-toggle="tab" href="#sinopse" role="tab" Sinopse
   li class="nav-item"
@@ -9,7 +9,7 @@ ul#project-tabs class="nav nav-tabs hidden-lg-down" role="tablist"
   li class="nav-item"
     a class="nav-link" data-toggle="tab" href="#gameplay" role="tab" Gameplay
 
-#project-content.tab-content
+#tab-content.tab-content
   #sinopse class="tab-pane fade show active" role="tabpanel"
     h1 Sinopse
     p 
