--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -130,6 +130,38 @@ footer {
   .quemsomos { background-image: url(image_path('quemsomos.jpg')); }
 }
 
+#tabs {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 768px;
+    margin: 0 auto;
+    padding: 40px 0;
+    border-bottom: none;
+    li {
+        font-size: 2.5em;
+        a {
+            @include titles;
+            opacity: .6;
+            padding: 8px 0;
+            background-color: transparent;
+            border: none;
+            &.active {
+                opacity: 1;
+                border-bottom: solid 2px;
+                border-color: #fff;
+            }
+        }
+    }
+}
+
+@include media-breakpoint-down(md) {
+    #tab-content > div {
+        display: block;
+        opacity: 1;
+    }
+}
+
 
 @include media-breakpoint-up(lg) {
     #brand {
@@ -157,7 +189,7 @@ footer {
     }
 
     body[class="pages#home"] {
-        #project {
+        #content {
           background-image: $bg__gradient_full2;
         }
     }
