--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -22,6 +22,8 @@
 //= require jquery.textillate
 //= require get-size
 //= require masonry-horizontal
+//= require parallax
+//= require jquery.parallax
 //= require global
 
 <% environment.context_class.instance_eval { include Rails.application.routes.url_helpers } %>
