--- a/app/views/quem_somos/_quemsomos.slim
+++ b/app/views/quem_somos/_quemsomos.slim
@@ -1,6 +1,6 @@
 img src="#{image_path('quemsomos.jpg')}"
 #tab-container
-  ul#tabs class="nav nav-tabs hidden-lg-down" role="tablist"
+  ul#tabs class="nav nav-tabs hidden-md-down" role="tablist"
     li class="nav-item"
       a class="nav-link" data-toggle="tab" href="#quemsomos" role="tab" Quem Somos
     li class="nav-item"
