--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -20,6 +20,7 @@ h2 { font-size: 2.5em; }
 p, span {
   font-family: $font__text;
   letter-spacing: .05em;
+  font-weight: 500;
 }
 
 p { text-align: justify; }
