--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -2,6 +2,7 @@ body {
     position: relative;
     padding: 60px 0 130px 0;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 body[class="pages#home"] {
