--- a/app/assets/stylesheets/_quemsomos.scss
+++ b/app/assets/stylesheets/_quemsomos.scss
@@ -53,8 +53,8 @@ body[class="quem_somos#index"] {
       padding: 40px 0 80px 0;
       display: flex;
       flex-flow: row nowrap;
-        > img { flex: 0 0 40%; width: 40% }
-        > #tab-container { flex: 0 0 60%; padding: 0 56px; }
+        > img { flex: 0 0 40%; width: 40%; z-index: 1; }
+        > #tab-container { flex: 0 0 60%; padding: 0 56px; z-index: 1; }
         #contact-form > h2 { display: none }
         .team img { width: 250px; height: 160px; }
         #quemsomos > h1 { margin: 0; }
