--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -12,6 +12,7 @@
 //
 //= require jquery
 //= require jquery_ujs
+//= require jquery.touchSwipe
 //= require bootstrap-sprockets
 //= require best_in_place
 //= require inplace_editing
