--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,6 +3,7 @@ html
   head
     title Eeze
     meta name="viewport" content="width=device-width, initial-scale=1" /
+    meta name="theme-color" content="#1f3360"
     = stylesheet_link_tag    'application', media: 'all'
     = csrf_meta_tags
   body class=[@current_page.page_uid]
