--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -20,8 +20,8 @@ h2 { font-size: 2.5em; }
 p, span {
   font-family: $font__text;
   letter-spacing: .05em;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 p { text-align: justify; }
-span { color: $color__sec; }
+span { color: $color__sec; font-size: 1.2em;}
