--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -25,7 +25,7 @@ a:focus, a:hover {
     min-height: 60px;
     justify-content: center;
     flex-flow: column wrap;
-    background: linear-gradient(to right, $color__red, $color__pink);
+    // background: linear-gradient(to right, $color__red, $color__pink);
     transition: margin .25s;
     position: fixed;
     top: 0;
@@ -34,6 +34,21 @@ a:focus, a:hover {
     z-index: 1030;
     a, button { display: flex; }
     button { top: 0.75rem; padding: 4px 0; }
+
+    .nav-background {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        right: 0;
+        opacity: 0;
+        background: linear-gradient(to right, $color__red, $color__pink);
+        transition: opacity .25s;
+        z-index: -1;
+    }
+    &.scrolled .nav-background {
+        opacity: 1;
+    }
 }
 
 #navbarCollapse ul {
@@ -107,6 +122,7 @@ footer {
 }
 
 #links {
+  margin-top: -1px;
   > a {
       height: 224px;
       display: flex;
@@ -141,6 +157,8 @@ footer {
     border-bottom: none;
     li {
         font-size: 2.5em;
+        min-width: 138px;
+        text-align: center;
         a {
             @include titles;
             opacity: .6;
@@ -176,7 +194,6 @@ footer {
       flex-flow: row wrap;
       justify-content: space-between;
     }
-
     #navbarCollapse{
         width: auto;
         ul {
