--- a/app/views/quem_somos/_quemsomos.slim
+++ b/app/views/quem_somos/_quemsomos.slim
@@ -1,4 +1,4 @@
-img src="#{image_path('quemsomos.jpg')}"
+img src="#{image_path('quemsomos-cover.jpg')}"
 #tab-container
   ul#tabs class="nav nav-tabs hidden-md-down" role="tablist"
     li class="nav-item"
