--- a/app/views/shared/_footer.slim
+++ b/app/views/shared/_footer.slim
@@ -1,12 +1,12 @@
 section#links class="hidden-lg-up"
   - if @current_page.page_uid != 'pepsi#index'
     a.projetos href="/pepsi"
-      h1 Projetos
-      span Veja o que já fizemos
+      h1 = localized_value_string(@global_page, 'footer.items.projetos.title', 'Projetos')
+      span = localized_value_string(@global_page, 'footer.items.projetos.description', 'Veja o que já fizemos')
   - if @current_page.page_uid != 'quem_somos#index'
     a.quemsomos href="/quem_somos"
-      h1 Quem Somos
-      span Saiba mais sobre a eeze
+      h1 = localized_value_string(@global_page, 'footer.items.quemsomos.title', 'Quem Somos')
+      span = localized_value_string(@global_page, 'footer.items.quemsomos.description', 'Saiba mais sobre a eeze')
 footer
   a href="" = svg 'logo'
   small Todos os direitos são reservados a eeze® game studio.
