--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -15,5 +15,5 @@ section#brand
   .scroll.hidden-lg-up = svg 'scroll'
 
 #content class="hidden-md-down"
-  section#project = render 'pepsi/pepsi'
-  section#quem-somos = render 'quem_somos/quemsomos'
+  section#project = render 'pages/shared/pepsi'
+  section#quem-somos = render 'pages/shared/quem_somos'
