--- a/app/views/pages/shared/_quem_somos.html.slim
+++ b/app/views/pages/shared/_quem_somos.html.slim
@@ -11,7 +11,7 @@ img src="#{image_path('quemsomos-cover.jpg')}"
       h1 = localized_value_string(@global_page, 'quemsomos.content.quemsomos.title', 'Lorem ipsum dolor sit amec.')
       = localized_value_text(@global_page, 'quemsomos.content.quemsomos.text1', "This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.") 
       = localized_value_text(@global_page, 'quemsomos.content.quemsomos.text2', "Nam nec cellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo.")
-      
+
       div.team
         img src="#{image_path('slide.png')}"
         .role
@@ -22,18 +22,17 @@ img src="#{image_path('quemsomos-cover.jpg')}"
         .role
           span = localized_value_string(@global_page, 'quemsomos.content.quemsomos.team.role2', 'CEO & Desenvolvedor')
           h2 = localized_value_string(@global_page, 'quemsomos.content.quemsomos.team.name1', 'Felipe Pimentel')
-          
-    
-    #contato class="tab-pane fade show active" role="tabpanel"   
+
+    #contato class="tab-pane fade show active" role="tabpanel"
       #contact-form 
         h2 = localized_value_string(@global_page, 'quemsomos.content.contato.title', 'Contato')
         = localized_value_text(@global_page, 'quemsomos.content.contato.text1', "This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.")
 
-        = simple_form_for @contact, url: contact_form_path, method: :post, html: { class: 'my_wrapper_id' } do |f|
+        = simple_form_for @contact, url: contato_path, method: :post, html: { class: 'my_wrapper_id' } do |f|
 
           = f.input :name, :required => true
           = f.input :email, :required => true
           = f.input :subject, :required => true
           = f.input :message, :as => :text, input_html: { :rows => 10 }, :required => true
-          
+
           = f.button :submit, :class=> 'btn'
