Adicionado Noty (funciona como toaster)

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -26,6 +26,7 @@
 //= require parallax
 //= require jquery.parallax
 //= require global
+//= require noty/packaged/jquery.noty.packaged
 
 <% environment.context_class.instance_eval { include Rails.application.routes.url_helpers } %>
 $(document).ready(function() {
