--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,3 +13,4 @@ html lang="pt-BR" xml:lang="pt-BR" xmlns="http://www.w3.org/1999/xhtml"
     = yield
     = render 'shared/footer'
     = javascript_include_tag 'application'
+    = render "shared/flash", locals: { flash: flash } unless flash.empty?
