--- a/app/assets/stylesheets/_project.scss
+++ b/app/assets/stylesheets/_project.scss
@@ -1,4 +1,4 @@
-body[class="pepsi#index"] {
+body[class="pages#pepsi"] {
   background-image:  url(image_path('pattern-pepsi.png')), $bg__gradient_full;
 }
 
