--- a/app/views/shared/_footer.slim
+++ b/app/views/shared/_footer.slim
@@ -1,9 +1,9 @@
 section#links class="hidden-lg-up"
-  - if @current_page.page_uid != 'pepsi#index'
+  - if @current_page.page_uid != 'pages*.scss'
     a.projetos href="#{pepsi_path}"
       h1 = localized_value_string(@global_page, 'footer.items.projetos.title', 'Projetos')
       span = localized_value_string(@global_page, 'footer.items.projetos.description', 'Veja o que já fizemos')
-  - if @current_page.page_uid != 'quem_somos#index'
+  - if @current_page.page_uid != 'pepsi#quem_somos'
     a.quemsomos href="#{quem_somos_path}"
       h1 = localized_value_string(@global_page, 'footer.items.quemsomos.title', 'Quem Somos')
       span = localized_value_string(@global_page, 'footer.items.quemsomos.description', 'Saiba mais sobre a eeze')
