--- a/app/views/pages/shared/_pepsi.html.slim
+++ b/app/views/pages/shared/_pepsi.html.slim
@@ -47,7 +47,7 @@ ul#tabs class="nav nav-tabs hidden-md-down" role="tablist"
   #gameplay class="tab-pane fade" role="tabpanel"
     h1 = localized_value_string(@global_page, 'projeto.content.gameplay.title', 'Gameplay')
     img.hidden-md-down src="#{image_path('gameplay.png')}" alt="Gameplay"
-    iframe src="http://player.vimeo.com/video/143253867?title=0&byline=0&portrait=0" width="284" height="505" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""
+    iframe src="https://player.vimeo.com/video/143253867?title=0&byline=0&portrait=0" width="284" height="505" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""
 
 .grid.hidden-md-down
   .box
