--- a/app/views/shared/_footer.slim
+++ b/app/views/shared/_footer.slim
@@ -10,3 +10,5 @@ section#links class="hidden-lg-up"
 footer
   a href="" = svg 'logo'
   small Todos os direitos são reservados a eeze® game studio.
+  #dev 
+    a href="http://nucleo235.com.br/" = svg 'nucleo' 
