--- a/app/assets/stylesheets/_quemsomos.scss
+++ b/app/assets/stylesheets/_quemsomos.scss
@@ -89,7 +89,7 @@ body[class="pages#quem_somos"] {
           }
           label {
               display: flex;
-              color: darken($color__main, 15%);
+              // color: darken($color__main, 15%);
               font-family: $font__text;
               font-weight: 700;
               font-size: 20px;
