--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@
 @import "bootstrap/carousel";
 @import "bootstrap/forms";
 @import "bootstrap/buttons";
+@import "bootstrap/modal";
 @import "font-awesome";
 @import "inplace_editing";
 @import "animate";
