--- a/app/views/pages/shared/_quem_somos.html.slim
+++ b/app/views/pages/shared/_quem_somos.html.slim
@@ -20,7 +20,7 @@ img src="#{image_path('quemsomos-cover.jpg')}"
       div.team
         img src="#{image_path('slide.png')}"
         .role
-          span = localized_value_string(@global_page, 'quemsomos.content.quemsomos.team.role2', 'CEO & Desenvolvedor')
+          span = localized_value_string(@global_page, 'quemsomos.content.quemsomos.team.role2', 'CTO & Desenvolvedor')
           h2 = localized_value_string(@global_page, 'quemsomos.content.quemsomos.team.name1', 'Felipe Pimentel')
 
     #contato class="tab-pane fade show active" role="tabpanel"
