--- a/app/assets/stylesheets/_project.scss
+++ b/app/assets/stylesheets/_project.scss
@@ -46,10 +46,27 @@ body[class="pages#pepsi"] {
     padding: 32px 0;
     margin-left: -16px;
     width: 100vw;
-    overflow-x: scroll;
+    overflow-x: visible;
+    position: relative;
+    span{
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        z-index: 100 !important;
+        margin: auto;
+
+        &.carousel-control-next-icon {
+          right: 16px;
+        }
+        &.carousel-control-prev-icon {
+          left: 16px;
+        }
+    }
 }
+
 .grid{
   height: calc(194px * 2);
+  transition: transform .25s ease;
   .box img{
     display: block;
     width: 192px;
@@ -83,9 +100,9 @@ body[class="pages#pepsi"] {
         }
         #gameplay.active {
             position: relative;
-            display: flex;
-            flex-flow: row wrap;
-            justify-content: center;
+            display: flex !important;
+            flex-flow: row wrap !important;
+            justify-content: center !important;
             img {
                 flex: 0 1 420px;
                 height: 800px;
@@ -124,4 +141,36 @@ body[class="pages#pepsi"] {
 
 @include media-breakpoint-up(xl) {
   #parallax-scene .layer img { zoom: .85; }
+}
+
+.modal-dialog {
+    max-width: 800px;
+}
+
+img.js-modal-image {
+    object-fit: cover;
+    width: 100%;
+}
+
+.grid .box {
+    overflow: hidden;
+    background-color: black;
+}
+
+.grid .box img {
+    transition: transform .25s ease, opacity .25s ease;
+}
+
+.grid .box:hover img {
+    transform: scale(1.1);
+    overflow: hidden;
+    opacity: 0.8;
+}
+
+.vimeo {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
