--- a/app/views/pages/shared/_pepsi.html.slim
+++ b/app/views/pages/shared/_pepsi.html.slim
@@ -42,37 +42,42 @@ ul#tabs class="nav nav-tabs hidden-md-down" role="tablist"
               img class="d-block img-fluid" src="#{image_path(i)}" alt="slide#{i}"
               
     #mansory
+      span class="carousel-control-prev-icon" aria-hidden="true" style="display: none;"
+      span class="carousel-control-next-icon" aria-hidden="true" style="display: none;"
 
               
   #gameplay class="tab-pane fade" role="tabpanel"
     h1 = localized_value_string(@global_page, 'projeto.content.gameplay.title', 'Gameplay')
     img.hidden-md-down src="#{image_path('gameplay.png')}" alt="Gameplay"
-    iframe src="https://player.vimeo.com/video/143253867?title=0&byline=0&portrait=0" width="284" height="505" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""
+    .vimeo
+      iframe src="https://player.vimeo.com/video/143253867?title=0&byline=0&portrait=0" width="284" height="505" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""
 
-.grid.hidden-md-down
-  .box
+
+.grid.hidden-md-down data-page="1" data-translate="0"
+  .box data-toggle="modal" data-target="#imageModal"
     img src="#{image_path(1)}"
-  .box
+  .box data-toggle="modal" data-target="#imageModal"
     img src="#{image_path(2)}"
-  .box.box-b
+  .box.box-b data-toggle="modal" data-target="#imageModal"
     img src="#{image_path(2)}"
-  .box
+  .box data-toggle="modal" data-target="#imageModal"
     img src="#{image_path(2)}"
-  .box
+  .box data-toggle="modal" data-target="#imageModal"
     img src="#{image_path(1)}"
-  .box.box-h
+  .box.box-h data-toggle="modal" data-target="#imageModal"
     img src="#{image_path(3)}"
-  .box.box-w
+  .box.box-w data-toggle="modal" data-target="#imageModal"
     img src="#{image_path(1)}"
-  .box.box-w
+  .box.box-w data-toggle="modal" data-target="#imageModal"
     img src="#{image_path(3)}"
-  .box
+  .box data-toggle="modal" data-target="#imageModal"
     img src="#{image_path(2)}"
-  .box
+  .box data-toggle="modal" data-target="#imageModal"
     img src="#{image_path(2)}"
-  .box.box-w
+  .box.box-w data-toggle="modal" data-target="#imageModal"
     img src="#{image_path(1)}"
-  .box
+  .box data-toggle="modal" data-target="#imageModal"
     img src="#{image_path(2)}"
-  .box
+  .box data-toggle="modal" data-target="#imageModal"
     img src="#{image_path(2)}"
+    
