--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,8 @@
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
 @import "bootstrap/mixins/image";
+@import "bootstrap/mixins/grid-framework";
+@import "bootstrap/mixins/grid";
 @import "bootstrap/reboot";
 @import "bootstrap/normalize";
 @import "bootstrap/utilities/position";
@@ -24,6 +26,7 @@
 @import "bootstrap/transitions";
 @import "bootstrap/nav";
 @import "bootstrap/navbar";
+@import "bootstrap/grid";
 @import "bootstrap/carousel";
 @import "bootstrap/forms";
 @import "bootstrap/buttons";
