--- a/app/views/projects/index.html.slim
+++ b/app/views/projects/index.html.slim
@@ -1,33 +1,43 @@
-h1 Listing projects
-
-table
-  thead
-    tr
-      th Name
-      th Type
-      th Summary
-      th Thumb image
-      th Logo image
-      th Sort order
-      th Slug
-      th
-      th
-      th
-
-  tbody
-    - @projects.each do |project|
-      tr
-        td = project.name
-        td = project.type
-        td = project.summary
-        td = project.thumb_image
-        td = project.logo_image
-        td = project.sort_order
-        td = project.slug
-        td = link_to 'Show', project
-        td = link_to 'Edit', edit_project_path(project)
-        td = link_to 'Destroy', project, data: { confirm: 'Are you sure?' }, method: :delete
-
-br
-
-= link_to 'New Project', new_project_path
+#projetosGrid.row
+  .col-xs-12.col-md-6.col-lg-4 style="background-image: url(#{image_path('jogo-pepsi')});"
+    / = image_bg_editor(project, :thumb_image, :div, { :class => 'thumb-image' })
+    div.conheca Conheça o projeto
+  .col-xs-12.col-md-6.col-lg-4 style="background-image: url(#{image_path('jogo-2')});"
+    / = image_bg_editor(project, :thumb_image, :div, { :class => 'thumb-image' })
+    div.conheca Conheça o projeto
+  .col-xs-12.col-md-6.col-lg-4 style="background-image: url(#{image_path('jogo-3')});"
+    / = image_bg_editor(project, :thumb_image, :div, { :class => 'thumb-image' })
+    div.conheca Conheça o projeto
+/ h1 Listing projects
+/ 
+/ table
+/   thead
+/     tr
+/       th Name
+/       th Type
+/       th Summary
+/       th Thumb image
+/       th Logo image
+/       th Sort order
+/       th Slug
+/       th
+/       th
+/       th
+/ 
+/   tbody
+/     - @projects.each do |project|
+/       tr
+/         td = project.name
+/         td = project.type
+/         td = project.summary
+/         td = project.thumb_image
+/         td = project.logo_image
+/         td = project.sort_order
+/         td = project.slug
+/         td = link_to 'Show', project
+/         td = link_to 'Edit', edit_project_path(project)
+/         td = link_to 'Destroy', project, data: { confirm: 'Are you sure?' }, method: :delete
+/ 
+/ br
+/ 
+/ = link_to 'New Project', new_project_path
